# debian-tools-retired

autobuilder/: AutoBuilder.cabal  Setup.hs  autobuilder  autobuilder.local  configure  runlocal
autobuilder/Debian/AutoBuilder/: BuildEnv.hs  BuildTarget.hs  Env.hs  LocalRepo.hs  Main.hs  Params.hs  Target.hs  Version.hs
autobuilder/Debian/AutoBuilder/BuildTarget/: Apt.hs  Bzr.hs  Cd.hs  Darcs.hs  DebDir.hs  Debianize.hs  Dir.hs  Git.hs  Hackage.hs  Hg.hs  Patch.hs  Proc.hs  Quilt.hs  SourceDeb.hs  Svn.hs  Tla.hs  Twice.hs  Uri.hs
autobuilder/Debian/AutoBuilder/Monads/: Deb.hs
autobuilder/Debian/AutoBuilder/Types/: Buildable.hs  CacheRec.hs  DefaultParams.hs  Download.hs  Fingerprint.hs  Packages.hs  ParamRec.hs  RetrieveMethodOld.hs
autobuilder/Test/: Test.hs
autobuilder/debian/: Debianize.hs  autobuilder.install  changelog  control  copyright  haskell-autobuilder-utils.install  libghc-autobuilder-doc.links  rules  watch
cabal-debian/: CabalDebian.hs  Setup.hs  Tests.hs  cabal-debian.cabal  changelog
cabal-debian/debian/: Debianize.hs  changelog  control  libghc-cabal-debian-doc.links  rules
cabal-debian/src/: Bundled.hs  CabalDebian.hs  Debianize.hs  Dependencies.hs  Interspersed.hs  InvertVersionRange.hs  Main.hs  Options.hs  PackageInfo.hs  Relations.hs  SubstVars.hs  Tests.hs  Triplets.hs  Utility.hs
cabal-debian/src/CabalDebian/: Flags.hs  SubstVars.hs
cabal-debian/src/Data/Algorithm/Diff/: Context.hs  Pretty.hs
cabal-debian/src/Debian/: Cabal.hs  DebT.hs  Debianize.hs  GHC.hs  Orphans.hs  Policy.hs
cabal-debian/src/Debian/Cabal/: Bundled.hs  Debianize.hs  Dependencies.hs  PackageDescription.hs  Tests.hs
cabal-debian/src/Debian/Debianize/: Atoms.hs  AtomsClass.hs  AtomsType.hs  BuildDependencies.hs  Bundled.hs  Cabal.hs  Combinators.hs  ControlFile.hs  DebianName.hs  Debianize.hs  Default.hs  Dependencies.hs  Details.hs  Files.hs  Files2.hs  Finalize.hs  Finalize2.hs  Flags.hs  Generic.hs  Goodies.hs  Input.hs  Interspersed.hs  Lenses.hs  Monad.hs  Options.hs  Output.hs  Paths.hs  Prelude.hs  Server.hs  Splits.hs  SubstVars.hs  SubstVars2.hs  Tests.hs  Types.hs  Utility.hs  VersionSplits.hs
cabal-debian/src/Debian/Debianize/Facts/: Lenses.hs  Monad.hs  Types.hs
cabal-debian/src/Debian/Debianize/Internal/: Dependencies.hs  Lenses.hs
cabal-debian/src/Debian/Debianize/Types/: Atoms.hs  Base.hs  DebControl.hs  Debianization.hs  Dependencies.hs  PackageHints.hs  PackageType.hs  VersionSplits.hs
cabal-debian/src/Distribution/: Debian.hs
cabal-debian/src/Distribution/Debian/: Bundled.hs  Config.hs  Control.hs  DebHelper.hs  Debianize.hs  Dependencies.hs  Interspersed.hs  MonadBuild.hs  Options.hs  PackageDescription.hs  PackageInfo.hs  Relations.hs  Server.hs  Splits.hs  SubstVars.hs  Utility.hs
cabal-debian/src/Distribution/Version/: Invert.hs
cabal-debian/test-data/alex/output/debian/: alex.install  control  rules
cabal-debian/test-data/archive/input/: seereason-darcs-backups.cabal
cabal-debian/test-data/archive/output/debian/: changelog  control  rules
cabal-debian/test-data/artvaluereport-data/output/debian/: changelog  control  libghc-artvaluereport-data-doc.links  rules  watch
cabal-debian/test-data/artvaluereport2/input/: artvaluereport2.cabal
cabal-debian/test-data/artvaluereport2/input/debian/: Debianize.hs  changelog
cabal-debian/test-data/artvaluereport2/output/debian/: artvaluereport2-backups.postinst  artvaluereport2-development.init  artvaluereport2-development.install  artvaluereport2-development.postinst  artvaluereport2-production.init  artvaluereport2-production.install  artvaluereport2-production.postinst  artvaluereport2-server.install  artvaluereport2-server.substvars  artvaluereport2-staging.init  artvaluereport2-staging.install  artvaluereport2-staging.postinst  changelog  control  rules  watch
cabal-debian/test-data/cabal-debian/input/: cabal-debian.cabal
cabal-debian/test-data/cabal-debian/output/debian/: control  rules
cabal-debian/test-data/clckwrks-dot-com/output/debian/: changelog  clckwrks-dot-com-production.dirs  clckwrks-dot-com-production.init  clckwrks-dot-com-production.logrotate  clckwrks-dot-com-production.postinst  control  rules  watch
cabal-debian/test-data/creativeprompts/input/: creativeprompts.cabal
cabal-debian/test-data/creativeprompts/output/debian/: control  creativeprompts-backups.postinst  creativeprompts-data.install  creativeprompts-development.init  rules  watch  (+6 more)
debian-repo/: debian-repo.cabal
debian-repo/Debian/: Config.hs  Repo.hs  VersionPolicy.hs
debian-repo/Debian/NewDist/: Config.hs  Main.hs  Options.hs  Version.hs
debian-repo/Debian/Repo/: Apt.hs  AptCache.hs  AptImage.hs  Cache.hs  Changes.hs  Deb.hs  Delete.hs  Dependencies.hs  File.hs  GHC.hs  Insert.hs  InstallResult.hs  LocalRepository.hs  Monad.hs  MonadOS.hs  OSImage.hs  Package.hs  PackageID.hs  PackageIndex.hs  Prelude.hs  Pretty.hs  Release.hs  RemoteRepository.hs  Repo.hs  Repos.hs  Repository.hs  SSH.hs  Slice.hs  SourceTree.hs  SourcesList.hs  State.hs  Sync.hs  Top.hs  Types.hs
debian-repo/Debian/Repo/Apt/: AptImage.hs  Cache.hs  Delete.hs  Insert.hs  OSImage.hs  Package.hs  PackageIndex.hs  Release.hs  Slice.hs
debian-repo/Debian/Repo/Deb/: OSImage.hs
debian-repo/Debian/Repo/Internal/: Apt.hs  Repos.hs
debian-repo/Debian/Repo/Monads/: Apt.hs  Cache.hs  Deb.hs  Top.hs
debian-repo/Debian/Repo/Prelude/: Files.hs  GPGSign.hs  List.hs  Lock.hs  Misc.hs  SSH.hs  Time.hs
debian-repo/Debian/Repo/SourceTree/: Classes.hs  Types.hs
debian-repo/Debian/Repo/State/: AptImage.hs  OSImage.hs  Package.hs  PackageIndex.hs  Release.hs  Repository.hs  Slice.hs
debian-repo/Debian/Repo/Types/: AptImage.hs  LocalRepository.hs  PackageID.hs  PackageIndex.hs  PackageVersion.hs  Release.hs  RemoteRepository.hs  Repo.hs  Repository.hs  Slice.hs
debian-repo/Extra/: SSH.hs
debian-repo/Test/: RepoCache.hs  Speed.hs  Speed2.hs  Test.hs  control
debian-repo/Text/: Format.hs
debian-repo/Tmp/: File.hs
debian-repo/debian/: changelog  control  copyright  rules
debian-repo/demos/: Versions.hs
(+31 files in other folders)
