Name:           cabal-debian
Version:        2.5.9
License:        BSD3
License-File:   debian/copyright
Author:         David Fox <dsf@seereason.com>
Category:       Debian, Distribution, System
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       http://src.seereason.com/cabal-debian
Build-Type:     Simple
Synopsis:       Create a debianization for a cabal package
Cabal-Version: >= 1.6
Description:
 Tool for creating debianizations of Haskell packages based on the .cabal
 file.  If apt-file is installed it will use it to discover what is the
 debian package name of a C library.

Source-Repository head
  type: darcs
  location: http://src.seereason.com/debian-tools

Library
 Hs-Source-Dirs: src
 GHC-Options: -threaded -Wall -O2
 Build-Depends:
   ansi-wl-pprint, applicative-extras, base < 5, bytestring, Cabal >= 1.9, containers, debian >= 3.68, directory, filepath, mtl, network, parsec >= 3, process, process-progress, pureMD5, regex-tdfa, unix, Unixutils >= 1.50, utf8-string
 Exposed-Modules:
   Distribution.Debian
   Distribution.Debian.Bundled
   Distribution.Debian.Config
   Distribution.Debian.Debianize
   Distribution.Debian.DebHelper
   Distribution.Debian.Dependencies
   Distribution.Debian.Interspersed
   Distribution.Debian.Options
   Distribution.Debian.PackageDescription
   Distribution.Debian.PackageInfo
   Distribution.Debian.Relations
   Distribution.Debian.Server
   Distribution.Debian.Splits
   Distribution.Debian.SubstVars
   Distribution.Debian.Utility
   Distribution.Version.Invert

Executable cabal-debian
 Hs-Source-Dirs: src
 Main-is: Main.hs
 ghc-options: -threaded -Wall -O2
 Build-Depends:
   applicative-extras, base < 5, bytestring, Cabal >= 1.9, containers, debian >= 3.69, directory, filepath, mtl, network, parsec >= 3, pretty, process, pureMD5, regex-tdfa, unix, Unixutils >= 1.50, utf8-string
