Name:           cabal-debian
Version:        2.6.3
License:        BSD3
License-File:   debian/copyright
Author:         David Fox <dsf@seereason.com>
Category:       Debian, Distribution, System
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       http://src.seereason.com/cabal-debian
Build-Type:     Simple
Synopsis:       Create a debianization for a cabal package
Cabal-Version: >= 1.8
Description:
 Tool for creating debianizations of Haskell packages based on the .cabal
 file.  If apt-file is installed it will use it to discover what is the
 debian package name of a C library.

Source-Repository head
  type: darcs
  location: http://src.seereason.com/debian-tools

Library
 Hs-Source-Dirs: src
 GHC-Options: -threaded -Wall -O2
 Build-Depends:
   ansi-wl-pprint,
   applicative-extras,
   base < 5,
   bytestring,
   Cabal >= 1.9,
   containers,
   debian >= 3.70,
   directory,
   filepath,
   hsemail,
   HUnit,
   mtl,
   network,
   parsec >= 3,
   process,
   process-progress,
   pureMD5,
   regex-tdfa,
   syb,
   text,
   unix,
   Unixutils >= 1.50,
   utf8-string
 Exposed-Modules:
   CabalDebian.Flags
   CabalDebian.SubstVars
   Debian.Cabal
   Debian.Cabal.Bundled
   Debian.Cabal.Debianize
   Debian.Cabal.Dependencies
   Debian.Cabal.PackageDescription
   Debian.Cabal.Tests
   Debian.Debianize.Combinators
   Debian.Debianize.Default
   Debian.Debianize.Files
   Debian.Debianize.Generic
   Debian.Debianize.Interspersed
   Debian.Debianize.Input
   Debian.Debianize.Output
   Debian.Debianize.Paths
   Debian.Debianize.Server
   Debian.Debianize.Types.Atoms
   Debian.Debianize.Types.Debianization
   Debian.Debianize.Types.PackageHints
   Debian.Debianize.Utility
   Debian.Orphans
   Debian.Policy
   Distribution.Version.Invert
   Triplets

Executable cabal-debian
 Main-is: src/CabalDebian.hs
 ghc-options: -threaded -Wall -O2
 Build-Depends:
   base,
   cabal-debian

Executable cabal-debian-tests
 Main-Is: src/Tests.hs
 GHC-Options: -Wall -O2 -threaded -rtsopts
 Build-Depends:
   base,
   cabal-debian,
   HUnit
