Name:           cabal-debian
Version:        3.10.1
License:        BSD3
License-File:   debian/copyright
Author:         David Fox <dsf@seereason.com>
Category:       Debian, Distribution, System
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       http://src.seereason.com/debian-tools/cabal-debian
Build-Type:     Simple
Synopsis:       Create a debianization for a cabal package
Cabal-Version: >= 1.8
Extra-Source-Files:
  changelog,
  debian/Debianize.hs
Description:
 This package provides two methods for generating the debianization
 (i.e. the contents of the 'debian' subdirectory) for a cabal package.
 An executable named cabal-debian, and a library API to handle more
 complex packaging issues.  For documentation of the executable run
 @cabal-debian --help@, for documentation of the library API follow
 the link to the @Debian.Debianize@ module below.
Flag tests
  Description: enable the unit test executable (disabled by default because it has a lot of wacky dependencies.)
  Default: False
  Manual: True

Source-Repository head
  type: darcs
  location: http://src.seereason.com/debian-tools

Library
 Hs-Source-Dirs: src
 GHC-Options: -Wall -O2
 Build-Depends:
   ansi-wl-pprint,
   base < 5,
   Cabal >= 1.9,
   containers,
   data-lens,
   debian >= 3.71,
   Diff,
   directory,
   filepath,
   hsemail,
   HUnit,
   mtl,
   parsec >= 3,
   process,
   pureMD5,
   regex-tdfa,
   set-extra,
   syb,
   text,
   unix,
   utf8-string
 Exposed-Modules:
   Data.Algorithm.Diff.Context
   Data.Algorithm.Diff.Pretty
   Debian.Debianize
   Debian.Policy
   Distribution.Version.Invert
   Debian.Debianize.Atoms
   Debian.Debianize.Bundled
   Debian.Debianize.ControlFile
   Debian.Debianize.Details
   Debian.Debianize.Files
   Debian.Debianize.Files2
   Debian.Debianize.Finalize
   Debian.Debianize.Goodies
   Debian.Debianize.Input
   Debian.Debianize.Interspersed
   Debian.Debianize.Lenses
   Debian.Debianize.Monad
   Debian.Debianize.Options
   Debian.Debianize.SubstVars
   Debian.Debianize.Types
   Debian.Debianize.Utility
   Debian.Debianize.VersionSplits
 Other-Modules:
   Debian.Orphans

Executable cabal-debian
 Hs-Source-Dirs: src
 Main-is: CabalDebian.hs
 ghc-options: -threaded -Wall -O2
 Build-Depends:
   ansi-wl-pprint,
   base,
   Cabal,
   containers,
   data-lens,
   debian,
   Diff,
   directory,
   filepath,
   hsemail,
   mtl,
   parsec,
   process,
   pureMD5,
   regex-tdfa,
   set-extra,
   syb,
   text,
   unix,
   utf8-string

Executable cabal-debian-tests
 Hs-Source-Dirs: src
 Main-is: Debian/Debianize/Tests.hs
 ghc-options: -threaded -Wall -O2
 Build-Depends:
   ansi-wl-pprint,
   base,
   Cabal,
   containers,
   data-lens,
   debian,
   Diff,
   directory,
   filepath,
   hsemail,
   HUnit,
   mtl,
   parsec >= 3,
   process,
   pureMD5,
   regex-tdfa,
   set-extra,
   syb,
   text,
   unix,
   utf8-string

-- Executable cabal-debian-tests
--  Main-Is: src/Tests.hs
--  GHC-Options: -Wall -O2 -threaded -rtsopts
--  Build-Depends:
--    ansi-wl-pprint,
--    base,
--    Cabal,
--    cabal-debian,
--    containers,
--    data-lens,
--    debian,
--    Diff,
--    directory,
--    filepath,
--    hsemail,
--    HUnit,
--    mtl,
--    parsec,
--    process,
--    pureMD5,
--    regex-tdfa,
--    syb,
--    text,
--    unix,
--    utf8-string
