Name:           debian-repo
Version:        5.52
License:        BSD3
License-File:	debian/copyright
Author:         David Fox
Category:	System
Maintainer:     david@seereason.com
Homepage:       http://src.seereason.com/debian-tools/debian-repo
Build-Type:	Simple
Synopsis:       Modules for working with Debian repositories
Description:
  This library includes modules covering the management of Debian
  package repositories, local caches of remote debian repositories,
  and Debian build environments.
Cabal-version: >= 1.2.3
Data-Files:
        demos/Versions.hs debian/changelog
        debian/compat debian/control debian/copyright
        debian/rules

flag local-debian
  Description: Link directly to the source of the debian library
  Default: False
  Manual: True

Library
  Buildable: True
  ghc-options: -O2 -threaded -Wall

  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80

  Build-Depends:
        ansi-wl-pprint, base, bytestring, Cabal, containers, data-lens, data-lens-template, deepseq, directory, Extra >= 1.43, filepath, MonadCatchIO-mtl,
        mtl, old-time, old-locale, network, parsec >= 3, process, process-listlike >= 0.6, process-progress >= 0.8, pureMD5,
        regex-compat, regex-tdfa, template-haskell, text, time, unix,
        Unixutils >= 1.51, bzlib, zlib, HaXml, MIME, applicative-extras, utf8-string
  Exposed-modules:
        Debian.Repo,
        Debian.Repo.Apt.AptImage,
        Debian.Repo.Apt.OSImage,
        Debian.Repo.Apt.Package,
        Debian.Repo.Apt.PackageIndex,
        Debian.Repo.Apt.Release,
        Debian.Repo.Apt.Slice,
        Debian.Repo.AptImage,
        Debian.Repo.Changes,
        Debian.Repo.Dependencies,
        Debian.Repo.EnvPath,
        Debian.Repo.LocalRepository,
        Debian.Repo.OSImage,
        Debian.Repo.Package,
        Debian.Repo.PackageID,
        Debian.Repo.PackageIndex,
        Debian.Repo.Prelude,
        Debian.Repo.RemoteRepository,
        Debian.Repo.Release,
        Debian.Repo.Repo,
        Debian.Repo.Repos,
        Debian.Repo.Slice,
        Debian.Repo.SourceTree,
        Debian.Repo.SSH,
        Debian.Repo.Top,
        Debian.VersionPolicy

Executable debian-versions
  Buildable: True
  Main-is: demos/Versions.hs
  ghc-options: -O2 -threaded -Wall
  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80

Executable newdist
  Buildable: True
  Main-is: Debian/NewDist/Main.hs
  ghc-options: -O2 -threaded -Wall -rtsopts
  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80

Executable speedtest
  Buildable: True
  Main-is: Test/Speed.hs
  ghc-options: -O2 -threaded -Wall -rtsopts
  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80

Executable speedtest2
  Buildable: True
  Main-is: Test/Speed2.hs
  ghc-options: -O2 -threaded -Wall -rtsopts
  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80
