Name:           debian-repo
Version:        5.59
License:        BSD3
License-File:	debian/copyright
Author:         David Fox
Category:	System
Maintainer:     david@seereason.com
Homepage:       http://src.seereason.com/debian-tools/debian-repo
Build-Type:	Simple
Synopsis:       Modules for working with Debian repositories
Description:
  This library includes modules covering the management of Debian
  package repositories, local caches of remote debian repositories,
  and Debian build environments.
Cabal-version: >= 1.2.3
Data-Files:
        demos/Versions.hs debian/changelog
        debian/compat debian/control debian/copyright
        debian/rules

flag local-debian
  Description: Link directly to the source of the debian library
  Default: False
  Manual: True

Library
  Buildable: True
  ghc-options: -O2 -threaded -Wall

  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80

  Build-Depends:
        applicative-extras,
        base,
        bytestring,
        bzlib,
        Cabal,
        cabal-debian >= 4.5,
        containers,
        data-lens,
        data-lens-template,
        deepseq,
        directory,
        exceptions,
        filepath,
        HaXml,
        MIME,
        mtl,
        network,
        old-locale,
        old-time,
        parsec >= 3,
        process,
        process-listlike >= 0.6,
        process-progress >= 0.9,
        pureMD5,
        regex-compat,
        regex-tdfa,
        template-haskell,
        text,
        time,
        unix,
        Unixutils >= 1.51,
        utf8-string,
        zlib
  Exposed-modules:
        Debian.Repo,
        Debian.Repo.AptImage,
        Debian.Repo.Changes,
        Debian.Repo.Dependencies,
        Debian.Repo.EnvPath,
        Debian.Repo.LocalRepository,
        Debian.Repo.OSImage,
        Debian.Repo.Package,
        Debian.Repo.PackageID,
        Debian.Repo.PackageIndex,
        Debian.Repo.Prelude,
        Debian.Repo.Prelude.Bool,
        Debian.Repo.Prelude.Files,
        Debian.Repo.Prelude.GPGSign,
        Debian.Repo.Prelude.List,
        Debian.Repo.Prelude.Lock,
        Debian.Repo.Prelude.Misc,
        Debian.Repo.Prelude.SSH,
        Debian.Repo.Prelude.Time,
        Debian.Repo.RemoteRepository,
        Debian.Repo.Release,
        Debian.Repo.Repo,
        Debian.Repo.Slice,
        Debian.Repo.SourceTree,
        Debian.Repo.State,
        Debian.Repo.State.AptImage,
        Debian.Repo.State.OSImage,
        Debian.Repo.State.Package,
        Debian.Repo.State.PackageIndex,
        Debian.Repo.State.Release,
        Debian.Repo.State.Repository,
        Debian.Repo.State.Slice,
        Debian.Repo.Top,
        Debian.VersionPolicy

Executable debian-versions
  Buildable: True
  Main-is: demos/Versions.hs
  ghc-options: -O2 -threaded -Wall
  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80

Executable newdist
  Buildable: True
  Main-is: Debian/NewDist/Main.hs
  ghc-options: -O2 -threaded -Wall -rtsopts
  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80

Executable speedtest
  Buildable: True
  Main-is: Test/Speed.hs
  ghc-options: -O2 -threaded -Wall -rtsopts
  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80

Executable speedtest2
  Buildable: True
  Main-is: Test/Speed2.hs
  ghc-options: -O2 -threaded -Wall -rtsopts
  if flag(local-debian)
    Hs-Source-Dirs: ., ../../haskell-debian
  else
    Build-Depends: debian >= 3.80
